<resources>
    <string name="app_name">Chủ Nhà</string>
    <string name="permission_setting">Setting</string>
    <string name="permission_close">Close</string>
    <string name="permission_confirm">Confirm</string>
    <string name="text_login_with_permission">Đăng nhập với tư cách là</string>
    <string name="text_employee">Nhân viên</string>
    <string name="text_farmer">Nông hộ</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_update">Cập nhật</string>
    <string name="text_booking_hanoi">Đặt lịch tại Hà Nội</string>
    <string name="text_booking_hcm">Đặt lịch tại HCM</string>
    <string name="text_capture">Chụp ảnh</string>
    <string name="text_choose_album">Chọn từ Albums</string>
    <string name="text_complete">Hoàn thành</string>
    <string name="text_register_account">Đăng ký tài khoản</string>
    <string name="text_phone_verification">Xác minh số điện thoại</string>
    <string name="text_content_verification">Nhập dãy 4 ký tự bao gồm chữ và số trong \n tin nhắn xác minh tại đây</string>
    <string name="text_forgot_password">Quên mật khẩu ?</string>
    <string name="text_back"><u>Quay lại</u></string>
    <string name="text_edit">Sửa</string>
    <string name="text_delete_address">Xóa địa chỉ</string>
    <string name="text_login_farmer">Đăng nhập nông dân</string>
    <string name="text_login_employee">Đăng nhập nhân viên</string>
    <string name="text_choose_farmer">Lựa chọn nông hộ</string>
    <string name="text_famer_id">Mã nông hộ:</string>
    <string name="text_address">Địa chỉ 1</string>
    <string name="text_diary">Nhật ký sản xuất</string>
    <string name="text_search">Tìm kiếm</string>
    <string name="text_close">Đóng</string>
    <string name="text_day">Theo ngày</string>
    <string name="text_week">Theo tuần</string>
    <string name="text_month">Theo tháng</string>
    <string name="text_product">Theo sản phẩm</string>
    <string name="text_logout">Đăng xuất</string>
    <string name="text_edited">Đã sửa</string>
    <string name="text_value">Giá trị</string>
    <string name="text_survey">Hẹn khảo sát</string>
    <string name="text_rating_orders">Đánh giá đơn hàng</string>
    <string name="text_review">Đánh giá</string>
    <string name="text_call_center">Trung tâm hỗ trợ</string>
    <string name="text_create_account">Tạo tài khoản mới với thông tin trên</string>
    <string name="text_blog_goi_tho">Blog gọi thợ</string>
    <string name="text_reason">Lý do hủy</string>
    <string name="text_status_exhibition">Trạng thái đơn hàng</string>
    <string name="text_need_repair">Cần sửa</string>
    <string name="text_repair_fee">Phí sửa chữa</string>
    <string name="text_content">Nội dung</string>
    <string name="text_repair">Yêu cầu sửa chữa</string>
    <string name="text_title_order_cancel">ĐƠN HÀNG ĐÃ HUỶ</string>
    <string name="text_point">Điểm tích lũy</string>
    <string name="text_add_diary">Thêm nhật ký</string>
    <string name="text_famer_rate">Đánh giá nông hộ:</string>
    <string-array name="array_spinner_search">
        <item>@string/text_day</item>
        <item>@string/text_week</item>
        <item>@string/text_month</item>
        <item>@string/text_product</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="text_toolbar_certificate">Thông tin chuẩn an toàn thực phẩm</string>
    <string name="text_safety">Chuẩn an toàn</string>
    <string name="text_note">Ghi chú</string>
    <string name="text_note_empty">Chưa có ghi chú</string>
    <string name="text_image">Hình ảnh</string>
    <string name="text_edit_detail_diary">Chỉnh sửa nhật ký</string>
    <string name="text_add_detail_diary">Thêm nhật ký</string>
    <string name="text_edit_profile">Chỉnh sửa trang cá nhân</string>
    <string name="text_type_action">Loại việc</string>
    <string name="text_time">Thời gian</string>
    <string name="text_info_contact">Thông tin liên hệ</string>
    <string name="text_picture">Ảnh hiện trạng</string>
    <string name="text_id_promotion_booking_success">Mã Khuyến mãi:</string>
    <string name="text_id_promotion_booking">Mã Khuyến mãi </string>
    <string name="text_rating">Đánh giá</string>
    <string name="text_updated">đã cập nhật lúc</string>
    <string name="day">Ngày</string>
    <string name="time">lần</string>
    <string name="text_no_data">Chưa có</string>
    <string name="text_add_image">Bạn có thêm hình ảnh?</string>
    <string name="text_agree">Đồng ý</string>
    <string name="text_use_code">Dùng mã</string>
    <string name="text_cancel">Hủy</string>
    <string name="text_reason_cancel">Báo giá cao so với thị trường.</string>
    <string name="text_reason_cancel2">Không hài lòng với thợ.</string>
    <string name="text_reason_cancel3">Tạm dừng, sẽ sửa sau.</string>
    <string name="text_content_cancel">Xin vui lòng cho Gọi Thợ biết nguyên nhân huỷ \n đơn hàng để
        chúng tôi có thể phục vụ bạn tốt \n hơn trong lần tới.</string>
    <string name="text_cancel_order">Hủy đơn</string>
    <string name="text_diary_day">Nhật ký ngày</string>
    <string name="text_save_address">Bạn có muốn lưu địa chỉ không?</string>
    <string name="text_at">Lúc</string>
    <string name="text_add_product">Thêm sản phẩm</string>
    <string name="product">Sản phẩm</string>
    <string name="text_info_certificate">Thông tin chuẩn an toàn thực phẩm</string>
    <string name="text_add_action">Tạo loại việc</string>
    <string name="text_add">Thêm</string>
    <string name="text_account">Tài khoản</string>
    <string name="text_notification">Thông báo</string>
    <string name="text_enter_content">Nhập nội dung</string>
    <string name="text_ok">OK</string>
    <string name="text_yes">Có</string>
    <string name="text_no">Không</string>
    <string name="text_no_rating">Xin vui lòng cho Gọi Thợ biết đánh giá \n của bạn</string>
    <string name="text_content_logout">Bạn có muốn đăng xuất không?</string>
    <string name="text_no_reason">Xin vui lòng cho Gọi Thợ biết nguyên \n nhân hủy đơn hàng để chúng tôi
    có thể \n phục vụ bạn tốt hơn trong lần tới</string>
    <string name="text_order_history">Lịch sử đơn hàng</string>
    <string name="text_title_home">SỬA CHỮA MỌI HƯ HỎNG</string>
    <string name="text_content_notification">Gọi Thợ đã nhận được thông tin của bạn. \n
        Chúng tôi sẽ tiến hành kiểm tra và reset \n các chỉ số tài khoản. \n
Hãy theo dõi thông báo để nhận thông tin \n update trên hệ thống </string>
    <string name="text_action_for_product">Tên loại việc cho sản phẩm</string>
    <string name="text_delete_action">Xóa loại việc</string>
    <string name="text_delete_action_question">Bạn có chắc muốn xóa loại việc</string>
    <string name="text_input_password">Vui lòng nhập mật khẩu</string>
    <string name="text_accept_delete_action">Tôi muốn xóa</string>
    <string name="text_history_updated">Lịch sử cập nhật</string>
    <string name="text_intro">Công ty nông nghiệp DTK</string>
    <string name="text_intro1">Nhà cung cấp rau củ sạch</string>
    <string name="text_begin">Bắt đầu</string>
    <string name="text_username">Tên đăng nhập</string>
    <string name="text_personal">Cá nhân</string>
    <string name="text_name">Họ tên</string>
    <string name="text_name_null">Họ tên không được để trống</string>
    <string name="text_address_null">Địa chỉ sửa chữa không được để trống</string>
    <string name="text_email_null">Địa chỉ email không được để trống</string>
    <string name="text_phone">Số điện thoại</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_password_profile">Mật khẩu:</string>
    <string name="text_hi">Xin chào</string>
    <string name="text_login_to_continue">Đăng nhập để tiếp tục</string>
    <string name="text_dont_have_account">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="text_have_account">Bạn đã có tài khoản? Đăng nhập ngay</string>
    <string name="text_register">Đăng ký</string>
    <string name="text_edit_account">Sửa tài khoản</string>
    <string name="text_verification">Xác minh</string>
    <string name="text_send_verification_code">Gửi lại mã xác minh</string>
    <string name="text_code_error">Mã xác minh không chính xác. \n Vui lòng nhập lại</string>
    <string name="text_search_farmer"><i>Tìm kiếm nông hộ</i></string>
    <string name="text_action">Hoạt động: </string>
    <string name="text_profile">Thông tin cá nhân</string>
    <string name="text_message">Tin nhắn</string>
    <string name="text_noti">Thông báo</string>
    <string name="text_setting">Cài đặt</string>
    <string name="text_order">Đặt lịch sửa chữa</string>
    <string name="text_send_rating">Gửi đánh giá</string>
    <string name="text_promotion">Khuyến mãi</string>
    <string name="text_booking_success">ĐẶT LỊCH THÀNH CÔNG</string>
    <string name="text_content_booking_success">Mã đơn hàng: A123. Gọi Thợ sẽ liên hệ với bạn sau ít \n phút để xác nhận thông tin.</string>
    <string name="text_related_posts">Bài viết liên quan</string>
    <string name="text_order_hotline">ĐẶT LỊCH QUA HOTLINE</string>
    <string name="text_confirm_cancel">XÁC NHẬN HUỶ</string>
    <string name="text_appointment">Lịch hẹn</string>
    <string name="text_take_care_home">MẸO CHĂM SÓC NHÀ CỬA</string>
    <string name="text_sweet_dialog_title">Thông báo</string>
    <string name="text_sweet_dialog_confirm_text">Đồng ý</string>
    <string name="text_sweet_dialog_confirm_text_exit">Thoát</string>
    <string name="text_customer_talk_app">KHÁCH HÀNG NÓI VỀ GỌI THỢ</string>
    <string name="text_sweet_dialog_confirm_text_cancel">Hủy</string>
    <string name="text_sweet_dialog_check_username_password">Vui lòng kiểm tra tài khoản và mật khẩu</string>
    <string name="text_progress_dialog">Vui lòng đợi ...</string>
    <string name="text_sweet_dialog_error">Đã có lỗi xảy ra, vui lòng thử lại ...</string>
    <string name="text_id">Mã:</string>
    <string name="text_farmer_id">Mã nông hộ:</string>
    <string name="text_employee_id">Mã nhân viên:</string>
    <string name="text_sweet_text_empty">Không được bỏ trống</string>
    <string name="text_delete_action_description">Nếu bạn xóa loại việc này, các nhật ký trước đây mà bạn nhập với loại việc </string>
    <string name="text_will_be_deleted"> sẽ bị xóa</string>
    <string name="text_famer_phone">Số điện thoại:</string>
    <string name="text_place">Địa điểm</string>
    <string name="text_save">Lưu</string>
    <string name="text_add_image1">Thêm ảnh</string>
    <string name="text_product_name">Tên sản phẩm:</string>
    <string name="text_product_title">Sản phẩm</string>
    <string name="text_action_title">Hành động</string>
    <string name="text_empty">Chưa có</string>
    <string name="text_list_farmer">Danh sách nông hộ</string>
    <string name="text_take_picture">Chụp ảnh</string>
    <string name="text_pick_picture">Chọn ảnh</string>
    <string name="text_input_note">Vui lòng nhập ghi chú</string>
    <string name="text_touch_register">CHẠM ĐỂ ĐĂNG KÝ</string>
    <string name="text_install">App Chủ Nhà</string>
    <string name="text_content_install">Không Lo Tìm Thợ</string>
    <string name="text_content_install2">Kết nối ngay với hàng ngàn thợ sửa chữa
        \n chuyên nghiệp</string>
    <string name="text_content_forget_pass">Nhập dãy 4 ký tự bao gồm chữ và số trong \n
        tin nhắn xác minh tại đây</string>
    <string name="text_get_pass">Lấy mật khẩu mới</string>
    <string name="text_toolbar_profile">THÔNG TIN TÀI KHOẢN</string>
    <string name="text_support_center">Trung tâm hỗ trợ</string>
    <string name="text_address_profile">ĐỊA CHỈ SỬA CHỮA</string>
    <string name="text_username_null">Tài khoản đăng nhập có ít nhất 6 ký tự, \n vui lòng nhập lại</string>
    <string name="text_password_null">Mật khẩu có ít nhất 6 ký tự, \n vui lòng nhập lại</string>
    <string name="text_phone_null">Bạn chưa nhập đủ số điện thoại, vui \n lòng nhập lại</string>
</resources>