<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_blue"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/slide1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_install"
                android:textColor="@color/whiteThree"
                android:textSize="@dimen/text_16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_8dp"
                android:text="@string/text_content_install"
                android:textColor="@color/whiteThree"
                android:textSize="@dimen/text_28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_8dp"
                android:gravity="center"
                android:text="@string/text_content_install2"
                android:textColor="@color/whiteThree"
                android:textSize="@dimen/text_12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/size_310dp"
                android:layout_height="@dimen/size_43dp"
                android:layout_marginTop="@dimen/distance_40dp"
                android:background="@drawable/bg_round_corner_button_blue_stroke_background"
                android:text="@string/text_touch_register"
                android:textColor="@color/whiteThree"
                android:textSize="@dimen/text_14sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/size_310dp"
                android:layout_height="@dimen/size_43dp"
                android:layout_marginBottom="@dimen/distance_2dp"
                android:layout_marginTop="@dimen/distance_16dp"
                android:background="@drawable/bg_round_corner_button_white_stroke"
                android:text="@string/text_login"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>