<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteFour">

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/img_cover" />

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:layout_marginTop="@dimen/distance_16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_register_account"
                android:textColor="@color/lightNavyTwo"
                android:textSize="@dimen/text_22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="@dimen/size_319dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_marginTop="@dimen/distance_16dp"
                android:background="@drawable/bg_round_corner_edtittext_white_three_background"
                android:drawablePadding="@dimen/distance_10dp"
                android:drawableStart="@drawable/ic_username"
                android:ellipsize="end"
                android:hint="@string/text_username"
                android:paddingLeft="@dimen/distance_16dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_14sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/size_319dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_marginTop="@dimen/distance_16dp"
                android:background="@drawable/bg_round_corner_edtittext_white_three_background"
                android:drawableEnd="@drawable/ic_show_pass"
                android:drawablePadding="@dimen/distance_10dp"
                android:drawableStart="@drawable/ic_lock"
                android:ellipsize="end"
                android:hint="@string/text_password"
                android:paddingLeft="@dimen/distance_16dp"
                android:paddingRight="@dimen/distance_16dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_14sp" />

            <EditText
                android:id="@+id/et_id"
                android:layout_width="@dimen/size_319dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_marginTop="@dimen/distance_16dp"
                android:background="@drawable/bg_round_corner_edtittext_white_three_background"
                android:drawablePadding="@dimen/distance_10dp"
                android:drawableStart="@drawable/ic_phone"
                android:ellipsize="end"
                android:hint="@string/text_phone"
                android:paddingLeft="@dimen/distance_16dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_14sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/size_319dp"
                android:layout_height="@dimen/size_42dp"
                android:layout_marginTop="@dimen/distance_16dp"
                android:background="@drawable/bg_round_corner_button_yellow_background"
                android:text="@string/text_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_16dp"
                android:id="@+id/txt_login"
                android:text="@string/text_have_account"
                android:textColor="@color/lightNavyTwo"
                android:textSize="@dimen/text_14sp" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>