<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_4dp"
            android:layout_marginTop="@dimen/distance_2dp"
            android:gravity="center"
            android:padding="@dimen/distance_8dp"
            android:text="@string/text_capture"
            android:textColor="@color/deepSkyBlueTwo"
            android:textSize="@dimen/text_14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/whiteSeven" />

        <TextView
            android:id="@+id/txt_choose_album"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/distance_20dp"
            android:layout_marginStart="@dimen/distance_20dp"
            android:gravity="center"
            android:padding="@dimen/distance_8dp"
            android:text="@string/text_choose_album"
            android:textColor="@color/deepSkyBlueTwo"
            android:textSize="@dimen/text_14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/whiteSeven" />

        <TextView
            android:id="@+id/txt_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/distance_8dp"
            android:paddingTop="@dimen/distance_2dp"
            android:text="@string/text_close"
            android:textColor="@color/deepSkyBlueTwo"
            android:textSize="@dimen/text_14sp"
            android:textStyle="bold" />


    </LinearLayout>

</android.support.v7.widget.CardView>
